--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <!-- FIXME change it to the project's website -->
   <!-- For testing webhook -->
   <!-- For testing webhook with token -->
+  <!-- For testing webhook with token -->
   <url>http://www.example.com</url>
 
   <properties>
